# TempModule

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TestMod.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  projData.json
cmake/: Utility.cmake
main/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  TestMod.vcxproj  TestMod.vcxproj.filters  cmake_install.cmake
main/include/: TestMod.hpp
main/src/: pch.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  test.vcxproj  test.vcxproj.filters
test/src/: BeginTest.cpp
